<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_repeat"
    android:orientation="vertical" >

    <include layout="@layout/common_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/order_bg_color"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/repeat_blod_slant"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dip" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="订单编号:"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@id/tvOrderNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="2101201201021"
                            android:textColor="@color/order_red_color"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dip"
                        android:layout_marginTop="10dip"
                        android:text="选择支付方式:"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <View
                            android:layout_width="0dip"
                            android:layout_height="1dip"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/ivChoicedOnlinePay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dip"
                            android:onClick="true"
                            android:src="@drawable/btn_round_checked" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_gender_nor"
                            android:padding="10dip"
                            android:text="线上支付"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dip"
                            android:layout_height="1dip"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/ivChoicedOfflinePay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dip"
                            android:onClick="true"
                            android:src="@drawable/btn_round_uncheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_gender_nor"
                            android:padding="10dip"
                            android:text="线下支付"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dip"
                            android:layout_height="1dip"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/bg_describe"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:visibility="gone" >

                        <ImageView
                            android:id="@+id/ivCoupon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/btn_square_uncheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_coupon"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/coupon_info"
                            android:textColor="#CDC29F"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edtCouponNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_describe"
                        android:hint="请填写优惠券号码"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:textColorHint="@color/hint_gray"
                        android:textSize="13sp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/viewInsuranceTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:background="@drawable/bg_describe"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp" >

                        <ImageView
                            android:id="@+id/ivInsurance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/btn_square_uncheck"
                            android:visibility="gone" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/get_insure"
                            android:textSize="13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/insure_info"
                            android:textColor="#CDC29F"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvInsuranceIntroduce"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_describe"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:paddingTop="5dp"
                        android:text="保险信息说明"
                        android:textSize="13sp"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dip"
                    android:layout_gravity="top"
                    android:background="@drawable/repeat_shade_line_up"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dip"
                    android:layout_gravity="bottom"
                    android:background="@drawable/repeat_shade_line_down" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/viewInsurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    style="@style/tvOrderItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*以下信息为获取保单之必要信息,请如实填写."
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/etPhoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_describe"
                    android:hint="请填写手机号码"
                    android:inputType="phone"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/bg_describe"
                    android:hint="请填写真实姓名"
                    android:inputType="text"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/etIdCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/bg_describe"
                    android:hint="请填写身份证号码"
                    android:inputType="number"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="13sp" />
                   <TextView
                    style="@style/tvOrderItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*请务必填写正确的邮箱信息，我们会将订单信息发送到您填写的邮箱."
                    android:textSize="13sp" />
                <!-- <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:checkedButton="@id/rbMale"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@id/rbMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="1"
                        android:button="@drawable/btn_gender_selector"
                        android:text="男"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@id/rbFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="1"
                        android:button="@drawable/btn_gender_selector"
                        android:text="女"
                        android:textSize="16sp" />
                </RadioGroup> -->

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/bg_describe"
                    android:hint="请填写邮箱"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="@color/hint_gray"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>